--- a/src/main/resources/META-INF/resources/frontend/login.css
+++ b/src/main/resources/META-INF/resources/frontend/login.css
@@ -1,6 +1,9 @@
 :host {
   background: var(--background-secondary-color);
-  box-shadow: 0 0 var(--base-shadow-range) var(--primary-contrast-color);
+}
+
+[part="form"] {
+  padding-bottom: 0;
 }
 
 [part="form-title"] {
