--- a/src/main/resources/templates/infoPage.html
+++ b/src/main/resources/templates/infoPage.html
@@ -6,32 +6,49 @@
 
 <body>
 
-    <div th:replace="fragments/menuBar.html :: menuBar(active=5)"></div>
-    <div class="container">
-        <div class="row">
-            <h2 class="col-md-12 my-5 largeText mx-0 text-center">Garrison Tracker</h2>
-            <hr>
-            <h3 class="col-md-12 my-5 text-center mediumText">About</h3>
-            <p class="col-md-6 offset-md-3 text-justify">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pretium ligula in elementum ullamcorper. Sed nec tincidunt turpis, pharetra lobortis est. In hac habitasse platea dictumst. Pellentesque habitant morbi tristique senectus et netus et malesuada
-                fames ac turpis egestas. Curabitur facilisis nulla a velit iaculis, vitae sodales diam tristique. Ut sagittis est vitae sagittis ultrices. Sed vehicula nunc sit amet fringilla convallis. Praesent lacinia euismod enim, facilisis interdum
-                justo. Vestibulum dapibus ligula lobortis volutpat cursus. Donec mattis neque sed eros tincidunt vestibulum. Etiam id arcu eu arcu aliquam porttitor. Integer mollis neque vehicula aliquet sollicitudin. Integer vestibulum dui at purus venenatis
-                placerat. Ut vel orci et arcu porttitor vehicula ac feugiat ex. Cras rutrum, ipsum non molestie mattis, sem risus pulvinar eros, vel molestie elit metus quis erat. Integer sit amet tincidunt nunc. In tincidunt nulla eget ex porttitor,
-                eget tempus magna eleifend. Quisque id odio eu ex accumsan ultricies. Duis tempor tempor semper. Integer dignissim, odio quis vehicula sodales, ex quam elementum enim, iaculis faucibus ligula tortor sit amet arcu. Donec sapien risus, pharetra
-                in arcu id, consequat ullamcorper elit. Duis ac lectus ultrices, ultricies eros nec, suscipit neque. Maecenas id ornare urna. Sed elementum ipsum nulla, sit amet tempor mauris ultrices non. Pellentesque fringilla ligula diam, a accumsan
-                nisl lacinia nec. Sed egestas elementum viverra. Mauris accumsan, massa a aliquam lacinia, dui nulla molestie magna, ut laoreet augue nunc quis turpis. Morbi pellentesque purus vitae lacus semper, scelerisque dapibus tortor tincidunt.
-                Nullam condimentum ligula sed urna porttitor, a facilisis nisl lobortis. Sed lobortis vel nisi ac mollis. Donec malesuada arcu et eros lobortis porta. Quisque bibendum maximus orci at sodales. Sed faucibus suscipit sem non fringilla. Vestibulum
-                eget odio euismod, blandit sapien vel, porttitor eros. Nulla id ipsum volutpat, varius ipsum nec, sagittis ligula.
-            </p>
-        </div>
-        <hr class="my-5">
+<div th:replace="fragments/menuBar.html :: menuBar(active=5)"></div>
+<div class="container">
+    <div class="row">
+        <h2 class="col-md-12 my-5 largeText mx-0 text-center">Garrison Tracker</h2>
+        <hr>
+        <h3 class="col-md-12 my-5 text-center mediumText">About</h3>
+        <p class="col-md-6 offset-md-3 text-justify">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pretium ligula in elementum ullamcorper. Sed
+            nec tincidunt turpis, pharetra lobortis est. In hac habitasse platea dictumst. Pellentesque habitant morbi
+            tristique senectus et netus et malesuada
+            fames ac turpis egestas. Curabitur facilisis nulla a velit iaculis, vitae sodales diam tristique. Ut
+            sagittis est vitae sagittis ultrices. Sed vehicula nunc sit amet fringilla convallis. Praesent lacinia
+            euismod enim, facilisis interdum
+            justo. Vestibulum dapibus ligula lobortis volutpat cursus. Donec mattis neque sed eros tincidunt vestibulum.
+            Etiam id arcu eu arcu aliquam porttitor. Integer mollis neque vehicula aliquet sollicitudin. Integer
+            vestibulum dui at purus venenatis
+            placerat. Ut vel orci et arcu porttitor vehicula ac feugiat ex. Cras rutrum, ipsum non molestie mattis, sem
+            risus pulvinar eros, vel molestie elit metus quis erat. Integer sit amet tincidunt nunc. In tincidunt nulla
+            eget ex porttitor,
+            eget tempus magna eleifend. Quisque id odio eu ex accumsan ultricies. Duis tempor tempor semper. Integer
+            dignissim, odio quis vehicula sodales, ex quam elementum enim, iaculis faucibus ligula tortor sit amet arcu.
+            Donec sapien risus, pharetra
+            in arcu id, consequat ullamcorper elit. Duis ac lectus ultrices, ultricies eros nec, suscipit neque.
+            Maecenas id ornare urna. Sed elementum ipsum nulla, sit amet tempor mauris ultrices non. Pellentesque
+            fringilla ligula diam, a accumsan
+            nisl lacinia nec. Sed egestas elementum viverra. Mauris accumsan, massa a aliquam lacinia, dui nulla
+            molestie magna, ut laoreet augue nunc quis turpis. Morbi pellentesque purus vitae lacus semper, scelerisque
+            dapibus tortor tincidunt.
+            Nullam condimentum ligula sed urna porttitor, a facilisis nisl lobortis. Sed lobortis vel nisi ac mollis.
+            Donec malesuada arcu et eros lobortis porta. Quisque bibendum maximus orci at sodales. Sed faucibus suscipit
+            sem non fringilla. Vestibulum
+            eget odio euismod, blandit sapien vel, porttitor eros. Nulla id ipsum volutpat, varius ipsum nec, sagittis
+            ligula.
+        </p>
     </div>
+    <hr class="my-5">
+</div>
 
-    <footer th:replace="fragments/footer.html :: footer">
+<footer th:replace="fragments/footer.html :: footer">
 
-    </footer>
+</footer>
 
-    <div th:insert="fragments/header.html :: scripts"></div>
+<div th:insert="fragments/header.html :: scripts"></div>
 </body>
 
 </html>
