--- a/src/main/resources/templates/track.html
+++ b/src/main/resources/templates/track.html
@@ -14,15 +14,15 @@
 
         <h2 class="text-center mx-auto">
             List of all entries
-            <a href="#" th:href="@{/track/newEntry}" class="btn btn-outline-secondary d-inline float-left col-3 "> <i
+            <a class="btn btn-outline-secondary d-inline float-left col-3 " href="#" th:href="@{/track/newEntry}"> <i
                     class="fas fa-plus"></i>
             </a>
         </h2>
     </div>
     <div class="row-flud flex-grow-1 p-5" th:if="${#lists.isEmpty(entries)}">
         <p class="text-center fs-2 align-middle m-5 ">You don't have any entries. <br>
-            <span class="fs-2" style="font-weight: bold;"><a th:href="@{/track/newEntry}" class="d-inline flat-left"
-                                                             style="color: #C9ADA7">Create entries and start tracking your progress</a></span>
+            <span class="fs-2" style="font-weight: bold;"><a class="d-inline flat-left" style="color: #C9ADA7"
+                                                             th:href="@{/track/newEntry}">Create entries and start tracking your progress</a></span>
         </p>
     </div>
     <table class="table-hover rounded w-75 mx-auto col-lg-8 my-5 table table-striped table-default table-borderless "
@@ -42,8 +42,8 @@
             <td class="col-3 text-center p-3" th:text="*{warPaint}"></td>
             <td class="col-3 text-center p-3" th:text="*{garrisonResources}"></td>
             <td class="">
-                <a type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#confirmationBox"
-                   th:href="@{'/track/delete/' + *{id}}"><i class="fas fa-trash"></i></a>
+                <a class="btn btn-outline-primary" data-target="#confirmationBox" data-toggle="modal" th:href="@{'/track/delete/' + *{id}}"
+                   type="button"><i class="fas fa-trash"></i></a>
             </td>
         </tr>
 
