--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -7,7 +7,7 @@
 
 <div class="flex-grow-1 container-fluid">
     <h1 class="fs-1 text-center my-5">Whopss</h1>
-    <h2 th:text="${status +' '+error}" class="text-center fs-2 my-5"></h2>
+    <h2 class="text-center fs-2 my-5" th:text="${status +' '+error}"></h2>
 </div>
 
 <div th:replace="fragments/footer.html :: footer"></div>
