--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,20 +3,20 @@
 
 <head>
     <script src="../../static/js/bootstrap.min.js" th:src="@{'/js/bootstrap.min.js'}"></script>
-    <link rel="stylesheet" href="#" th:href="@{'/css/bootstrap.min.css'}">
-    <link rel="stylesheet" href="#" th:href="@{'/css/global.css'}">
+    <link href="#" rel="stylesheet" th:href="@{'/css/bootstrap.min.css'}">
+    <link href="#" rel="stylesheet" th:href="@{'/css/global.css'}">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
 
 <body>
 
-    <div th:fragment="footer">
-        <footer class="container-fluid row bg-dark mx-0 align-items-center">
-            <h4 class="text-secondary fs-6 m-0 p-0">Created by <b>Jakub Pietrzyk</b></h4>
-        </footer>
-    </div>
+<div th:fragment="footer">
+    <footer class="container-fluid row bg-dark mx-0 align-items-center">
+        <h4 class="text-secondary fs-6 m-0 p-0">Created by <b>Jakub Pietrzyk</b></h4>
+    </footer>
+</div>
 
-    <script src="../../static/js/bootstrap.min.js"></script>
+<script src="../../static/js/bootstrap.min.js"></script>
 </body>
 
 </html>
