Bricked. Pushing to move project to other disk

--- a/src/main/resources/META-INF/resources/frontend/contact.css
+++ b/src/main/resources/META-INF/resources/frontend/contact.css
@@ -10,6 +10,11 @@
     font-weight: bold;
 }
 
+.value{
+    font-style: italic;
+    font-size: 25px;
+}
+
 .info-box {
     margin: 1em 1em;
     background: #252422;
