--- a/frontend/css/global.css
+++ b/frontend/css/global.css
@@ -4,7 +4,7 @@
 
 .primary-background{
     background: var(--background-primary-color);
-    background-image: url('/img/bg.png');
+    background-image: url('/img/bg3.png');
 }
 
 .register-form *{
