--- a/frontend/css/dialogBox.css
+++ b/frontend/css/dialogBox.css
@@ -3,7 +3,7 @@
   background: linear-gradient(130deg, rgba(235, 94, 40, 1) 0%, rgba(64, 61, 57, 1) 50%, rgba(37, 36, 34, 1) 100%);
   box-shadow: 0 0 var(--mega-shadow-range) var(--primary-contrast-color);
   height: auto;
-  width: 25vw;
+  max-width: 450px;
 }
 
 [part="content"] {
